bases/parksmap/templates/database-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/custom-icon: ""
    app.openshift.io/route-disabled: "false"
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mongodb:6.0.4","namespace":"wksp-user1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mongodb\")].image","paused":false}]'
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2026-03-19T12:04:35Z"
  generation: 1
  labels:
    app: workshop
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: mongodb
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: workshop
    app.openshift.io/runtime-icon: mongodb
    app.openshift.io/runtime-namespace: wksp-user1
    component: nationalparks
    role: database
  name: mongodb
  namespace: wksp-user1
  resourceVersion: "533875"
  uid: 75059a21-5b78-40b4-bb9c-0e0964b649bf
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongodb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      labels:
        app: mongodb
        deployment: mongodb
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          valueFrom:
            secretKeyRef:
              key: admin-usr
              name: mongodb-credentials
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: admin-pwd
              name: mongodb-credentials
        image: image-registry.openshift-image-registry.svc:5000/wksp-user1/mongodb@sha256:3c8dd1b08f8a2ec0338902affd432b40130e5acf49d6e3a1ca05ff5168100059
        imagePullPolicy: IfNotPresent
        name: mongodb
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/configdb
          name: mongodb-1
        - mountPath: /data/db
          name: mongodb-2
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: mongodb-1
      - emptyDir: {}
        name: mongodb-2
