bases/parksmap/templates/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2026-03-19T12:04:35Z"
  labels:
    app: mongodb
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: mongodb
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: workshop
    app.openshift.io/runtime-version: 6.0.4
  name: mongodb
  namespace: wksp-user1
  resourceVersion: "531800"
  uid: 399fd411-2cce-466d-b8bc-bfd05c9394ad
spec:
  clusterIP: 172.231.196.180
  clusterIPs:
  - 172.231.196.180
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 27017-tcp
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
    deployment: mongodb
  sessionAffinity: None
  type: ClusterIP
